--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,13 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-html{
-  scroll-behavior: smooth;
-}
-
 @layer base {
   body{
-    @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide
+    @apply bg-[#151515] text-[#EEEEEE] tracking-wide
   }
 
   h1, h2, h3, h4, h5, h6{
@@ -28,6 +24,6 @@ html{
   }
 
   button {
-    @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white
+    @apply shadow-xl shadow-indigo-500/40 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white
   }
 }
